--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,3 +1,101 @@
-<p>
-  portfolio works!
-</p>
+<div class="container">
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md mt-5 justify-content-center portfolio-container">
+          <h1 class="main-title">Portfolio</h1>
+          <p>See my works below. Unless stated otherwise in their description, 
+            <strong>all their back-end and front-end parts were completely done by me.</strong></p>
+          <div class=" row project-container">
+            <div class="col-md-8 list-inline">
+              <p class="date text-muted list-inline-item ml-5 pr-3 mr-3">Nov 2018 --</p>
+              <div class="list-inline-item">
+                <p class="project-title">Xtreme Twitting App</p>
+                <div class="project-info">
+                    <p>It's free and will always be, signup now and enjoy a new social experience</p>
+                    <p><strong>Xtreme Twitting App is a web platform clone from the original Twitter app, which gives users the ability to:</strong></p>
+                      <ul>
+                        <li>to let the world know what they think about different things going on in their lives or the world</li>
+                        <li>inform or communicate indirectly with a huge number of people</li>
+                      </ul>
+                    <a href="http://www.xta.world/" class="btn btn-primary">Live Website</a>
+                    <h6 class="text-muted mt-5">TECHNOLOGIES</h6>
+                    <div class="technologies">
+                      <li><a href="https://nodejs.org/en/docs/" rel="nofollow" target="_blank">NodeJs</a></li>
+                      <li><a href="https://docs.angularjs.org/api">AngularJs</a></li>
+                      <li><a href="https://docs.mongodb.com/manual/">Mongodb</a></li>
+                      <li><a href="https://expressjs.com/">Express</a></li>
+                      <li><a href="https://alertifyjs.com/">AlertifyJs</a></li>
+                      <li><a href="https://ng-bootstrap.github.io/#/getting-started">Ng-bootstrap</a></li>
+                      <li><a href="https://github.com/samuelA1/Xtremetwitting">github/git</a></li>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <img src="../../assets/pageshot of 'Xtreme Twitter App' @ 2018-11-20-1624'43.png" alt="web-image">
+            </div>
+            
+<!-- Project 2 -->
+            
+            <div class="col-md-8 list-inline">
+                <p class="date text-muted list-inline-item ml-5 pr-3 mr-3">2017 - 2018</p>
+                <div class="list-inline-item">
+                  <p class="project-title">Xtreme Shopping App</p>
+                  <div class="project-info">
+                      <p>Get whatever you want and at any given time, delivered to your door steps</p>
+                      <p><strong>Xtreme Shaopping App is a web platform clone from the original Amazon app, which gives users the ability to:</strong></p>
+                        <ul>
+                          <li>shop whatever type of product they want and at reasonable prices</li>
+                          <li>sell what ever product and quantity with lots of profits</li>
+                        </ul>
+                      <a href="http://www.xtremeshopping.store/" rel="nofollow" target="_blank" class="btn btn-primary">Live Website</a>
+                      <h6 class="text-muted mt-5">TECHNOLOGIES</h6>
+                      <div class="technologies">
+                        <li><a href="https://nodejs.org/en/docs/" rel="nofollow" target="_blank">NodeJs</a></li>
+                        <li><a href="https://docs.angularjs.org/api" rel="nofollow" target="_blank">AngularJs</a></li>
+                        <li><a href="https://docs.mongodb.com/manual/" rel="nofollow" target="_blank">Mongodb</a></li>
+                        <li><a href="https://expressjs.com/" rel="nofollow" target="_blank">Express</a></li>
+                        <li><a href="https://aws.amazon.com/" rel="nofollow" target="_blank">aws</a></li>
+                        <li><a href="https://alertifyjs.com/" rel="nofollow" target="_blank">AlertifyJs</a></li>
+                        <li><a href="https://ng-bootstrap.github.io/#/getting-started" rel="nofollow" target="_blank">Ng-bootstrap</a></li>
+                        <li><a href="https://github.com/samuelA1/Xtremeshopping" rel="nofollow" target="_blank">github/git</a></li>
+                      </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <img src="../../assets/pageshot of 'Xtreme Shopping App' @ 2018-11-20-2103'26.png" alt="web-image">
+              </div>
+<!-- Project 3 -->
+              <div class="col-md-8 list-inline">
+                  <p class="date text-muted list-inline-item ml-5 pr-3 mr-3">May 2017 --</p>
+                  <div class="list-inline-item">
+                    <p class="project-title">Xtreme Movie Theatres</p>
+                    <div class="project-info">
+                        <p>Get the rewarding and entertaining experience you deserve</p>
+                        <p><strong>Xtreme Movie Theatres is a web platform clone from the original AMC theatres app, which gives users the ability to:</strong></p>
+                          <ul>
+                            <li>select and buy movie tickets of recent movies in the best high quality ever</li>
+                            <li>see different showtimes of different movies at different theatres</li>
+                          </ul>
+                        <a href="http://xmtheatres.com/" rel="nofollow" target="_blank" class="btn btn-primary">Live Website</a>
+                        <h6 class="text-muted mt-5">TECHNOLOGIES</h6>
+                        <div class="technologies">
+                          <li><a href="http://php.net/docs.php" rel="nofollow" target="_blank">Php</a></li>
+                          <li><a href="https://laravel.com/docs/5.7/installation" rel="nofollow" target="_blank">Laravel 5.7</a></li>
+                          <li><a href="https://dev.mysql.com/doc/" rel="nofollow" target="_blank">mysql</a></li>
+                          <li><a href="https://laravelvoyager.com/academy/" rel="nofollow" target="_blank">Voyager</a></li>
+                          <li><a href="https://symfony.com/" rel="nofollow" target="_blank">Symfony</a></li>
+                          <li><a href="https://api.jquery.com/" rel="nofollow" target="_blank">jquery</a></li>
+                          <li><a href="https://github.com/samuelA1/Xtrememovies" rel="nofollow" target="_blank">github/git</a></li>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <img src="../../assets/pageshot of 'Xtreme Movie Theatres' @ 2018-11-20-2122'20.png" alt="web-image">
+                </div>
+          </div>
+      </div>
+    </div>
+  </div>
