--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,13 +1,14 @@
 <div class="container">
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md mt-5 justify-content-center portfolio-container">
+      <div class="col-md-9 mt-5  portfolio-container">
           <h1 class="main-title">Portfolio</h1>
           <p>See my works below. Unless stated otherwise in their description, 
-            <strong>all their back-end and front-end parts were completely done by me.</strong></p>
-          <div class=" row project-container">
+            <strong>all their back-end and front-end parts were completely done by me.</strong>
+          </p>
+          <div class=" row">
             <div class="col-md-8 list-inline">
-              <p class="date text-muted list-inline-item ml-5 pr-3 mr-3">Nov 2018 --</p>
+              <p class="date text-muted list-inline-item ml-3 pr-3 mr-3 date-first">November 2018 </p>
               <div class="list-inline-item">
                 <p class="project-title">Xtreme Twitting App</p>
                 <div class="project-info">
@@ -31,7 +32,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 project-image">
               <img src="../../assets/pageshot of 'Xtreme Twitter App' @ 2018-11-20-1624'43.png" alt="web-image">
             </div>
             
@@ -63,7 +64,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 project-image">
                 <img src="../../assets/pageshot of 'Xtreme Shopping App' @ 2018-11-20-2103'26.png" alt="web-image">
               </div>
 <!-- Project 3 -->
@@ -92,7 +93,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 project-image">
                   <img src="../../assets/pageshot of 'Xtreme Movie Theatres' @ 2018-11-20-2122'20.png" alt="web-image">
                 </div>
           </div>
