--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -96,6 +96,32 @@
                 <div class="col-md-4 project-image">
                   <img src="../../assets/pageshot of 'Xtreme Movie Theatres' @ 2018-11-20-2122'20.png" alt="web-image">
                 </div>
+
+                <!-- Project 4 -->
+                <div class="col-md-8 list-inline">
+                    <p class="date text-muted list-inline-item ml-5 pr-3 mr-3">2016-Apr17</p>
+                    <div class="list-inline-item">
+                      <p class="project-title">Organic Shop (OShop)</p>
+                      <div class="project-info">
+                          <p>Get all the organic food you ever want in one place</p>
+                          <p><strong>Organic Shop is a web platform built with Angular, which gives users the ability to:</strong></p>
+                            <ul>
+                              <li>shop as many organic food as they can</li>
+                              <li>gives administrators the ability to add more and new items to sell</li>
+                            </ul>
+                          <a href="https://orgshop.shop/" rel="nofollow" target="_blank" class="btn btn-primary">Live Website</a>
+                          <h6 class="text-muted mt-5">TECHNOLOGIES</h6>
+                          <div class="technologies">
+                            <li><a href="https://docs.angularjs.org/api" rel="nofollow" target="_blank">AngularJs</a></li>
+                            <li><a href="https://console.firebase.google.com" rel="nofollow" target="_blank">firebase</a></li>
+                            <li><a href="https://github.com/samuelA1/Oshop" rel="nofollow" target="_blank">github/git</a></li>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 project-image">
+                    <img src="../../assets/pageshot of 'Oshop' @ 2018-11-21-1538'10.png" alt="web-image">
+                  </div>
           </div>
       </div>
     </div>
