--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,10 +1,3 @@
-.main-title {
-    text-transform: uppercase;
-    line-height: 1;
-    margin-bottom: 15px;
-    color: #555;
-}
-
 .container {
     color: black;
     margin: 0;
@@ -34,7 +27,8 @@ li {
 
 img {
     width: 100%;
-    border-radius: none
+    border-radius: none;
+    max-height: 500px;
 }
 
 ul {
@@ -59,10 +53,6 @@ ul {
     margin: 5px;
     list-style: none;
     text-decoration: none;
-}
-
-strong {
-    font-weight: bold
 }
 
 @media screen and (min-width: 0px) and (max-width: 767px) {
