--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,16 @@ ul {
     list-style: none;
 }
 
+.main-title {
+    text-transform: uppercase;
+    line-height: 1;
+    margin-bottom: 15px;
+    color: #555;
+}
+
+strong {
+    font-weight: bold
+}
 
 body {
     color: white;
