--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-secondary col-md-3 sidebar" [ngStyle]="{'height':toggleshow ? '415px' : ''}">
         <div class="container">
             <div class="row">
-                <div class="text-center">
+                <div class="col-md text-center">
                     <div class="person-info">
                             <a [routerLink]="['']" routerLinkActive="active" >
                                 <img  class="mb-2" src="../assets/zfB5KqXn_400x400.jpg"
@@ -12,7 +12,7 @@
                             </a>
                     </div>
                 </div>
-                <div class="collapse navbar-collapse" id="navbarCollapse" [ngClass]="toggleshow ? 'show': 'false'">
+                <div class="col-md collapse navbar-collapse" id="navbarCollapse" [ngClass]="toggleshow ? 'show': 'false'">
                         <ul class="nav flex-column">
                             <li >
                             <a [routerLink]="['/portfolio']" routerLinkActive="active" >Portfolio</a>
