--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -8,6 +8,7 @@ a {
     color: black;
     margin: 10px;
     width: 100%;
+    max-width: 1500px;
 }
 
 @media screen and (min-width: 0px) and (max-width: 767px) {
