Added stripr to portfolio

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -48,6 +48,7 @@
                         <ul>
                           <li>shop whatever type of product they want and at reasonable prices</li>
                           <li>sell what ever product and quantity with lots of profits</li>
+                          <li>use stripe to process online payments in real time</li>
                         </ul>
                       <a href="http://www.xtremeshopping.store/" rel="nofollow" target="_blank" class="btn btn-primary">Live Website</a>
                       <h6 class="text-muted mt-5">TECHNOLOGIES</h6>
@@ -57,6 +58,7 @@
                         <li><a href="https://docs.mongodb.com/manual/" rel="nofollow" target="_blank">Mongodb</a></li>
                         <li><a href="https://expressjs.com/" rel="nofollow" target="_blank">Express</a></li>
                         <li><a href="https://aws.amazon.com/" rel="nofollow" target="_blank">aws</a></li>
+                        <li><a href="https://stripe.com/" rel="nofollow" target="_blank">stripe</a></li>
                         <li><a href="https://alertifyjs.com/" rel="nofollow" target="_blank">AlertifyJs</a></li>
                         <li><a href="https://ng-bootstrap.github.io/#/getting-started" rel="nofollow" target="_blank">Ng-bootstrap</a></li>
                         <li><a href="https://github.com/samuelA1/Xtremeshopping" rel="nofollow" target="_blank">github/git</a></li>
