updated skills section

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -48,6 +48,10 @@
             build Restful APIs in NodeJs/PHP
           </li>
           <li>
+            automated testing <strong>(unit, intergration and test-driven(TDD) )</strong> of Restful APIs using
+             <strong>Jest</strong> or <strong>Jasmine</strong>
+          </li>
+          <li>
             cooperation with APIs, remote data synchronizations, cloud servers, asynchronous workers
           </li>
           <li>
