--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,7 +1,7 @@
 .container { 
     position: absolute;
     color: black;
-    margin: 10px;
+    // margin: 10px;
     width: 100%;
     max-width: 1500px;
 }
