--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -6,7 +6,7 @@ a {
 .container { 
     position: absolute;
     color: black;
-    margin: 10px;
+    // margin: 10px;
     width: 100%;
     max-width: 1500px;
 }
