--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,8 +23,11 @@
                             <li >
                             <a [routerLink]="['/contact']" routerLinkActive="active" >Contact</a>
                             </li>
+                            <li class="mt-3">
+                                <a class="text-danger" href="../assets/Samuel-Resume.pdf" download>Download CV</a>
+                            </li>
                         </ul>
-                    </div>
+                </div>
             </div>
         </div>
         <button (click)="toggle()" class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
