--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -8,7 +8,7 @@
           </p>
           <div class=" row">
             <div class="col-md-8 list-inline">
-              <p class="date text-muted list-inline-item ml-3 pr-3 mr-3 date-first">November 2018 </p>
+              <p class="date text-muted list-inline-item ml-3 pr-3 mr-3 date-first">November 2018</p>
               <div class="list-inline-item">
                 <p class="project-title">Xtreme Twitting App</p>
                 <div class="project-info">
@@ -18,16 +18,16 @@
                         <li>to let the world know what they think about different things going on in their lives or the world</li>
                         <li>inform or communicate indirectly with a huge number of people</li>
                       </ul>
-                    <a href="http://www.xta.world/" class="btn btn-primary">Live Website</a>
+                    <a href="http://www.xta.world/" class="btn btn-primary mr-3" target="_blank">Live Website</a>
+                    <a class="btn btn-primary" href="https://github.com/samuelA1/Xtremetwitting" target="_blank">github/git</a>
                     <h6 class="text-muted mt-5">TECHNOLOGIES</h6>
                     <div class="technologies">
                       <li><a href="https://nodejs.org/en/docs/" rel="nofollow" target="_blank">NodeJs</a></li>
-                      <li><a href="https://docs.angularjs.org/api">AngularJs</a></li>
-                      <li><a href="https://docs.mongodb.com/manual/">Mongodb</a></li>
-                      <li><a href="https://expressjs.com/">Express</a></li>
-                      <li><a href="https://alertifyjs.com/">AlertifyJs</a></li>
-                      <li><a href="https://ng-bootstrap.github.io/#/getting-started">Ng-bootstrap</a></li>
-                      <li><a href="https://github.com/samuelA1/Xtremetwitting">github/git</a></li>
+                      <li><a href="https://docs.angularjs.org/api" target="_blank">AngularJs</a></li>
+                      <li><a href="https://docs.mongodb.com/manual/" target="_blank">Mongodb</a></li>
+                      <li><a href="https://expressjs.com/" target="_blank">Express</a></li>
+                      <li><a href="https://alertifyjs.com/" target="_blank">AlertifyJs</a></li>
+                      <li><a href="https://ng-bootstrap.github.io/#/getting-started" target="_blank">Ng-bootstrap</a></li>
                     </div>
                 </div>
               </div>
@@ -50,7 +50,8 @@
                           <li>sell what ever product and quantity with lots of profits</li>
                           <li>use stripe to process online payments in real time</li>
                         </ul>
-                      <a href="http://www.xtremeshopping.store/" rel="nofollow" target="_blank" class="btn btn-primary">Live Website</a>
+                      <a href="http://www.xtremeshopping.store/" rel="nofollow" target="_blank" class="btn btn-primary mr-3">Live Website</a>
+                      <a href="https://github.com/samuelA1/Xtremeshopping" class="btn btn-primary" rel="nofollow" target="_blank">github/git</a>
                       <h6 class="text-muted mt-5">TECHNOLOGIES</h6>
                       <div class="technologies">
                         <li><a href="https://nodejs.org/en/docs/" rel="nofollow" target="_blank">NodeJs</a></li>
@@ -61,7 +62,6 @@
                         <li><a href="https://stripe.com/" rel="nofollow" target="_blank">stripe</a></li>
                         <li><a href="https://alertifyjs.com/" rel="nofollow" target="_blank">AlertifyJs</a></li>
                         <li><a href="https://ng-bootstrap.github.io/#/getting-started" rel="nofollow" target="_blank">Ng-bootstrap</a></li>
-                        <li><a href="https://github.com/samuelA1/Xtremeshopping" rel="nofollow" target="_blank">github/git</a></li>
                       </div>
                   </div>
                 </div>
@@ -71,7 +71,7 @@
               </div>
 <!-- Project 3 -->
               <div class="col-md-8 list-inline">
-                  <p class="date text-muted list-inline-item ml-5 pr-3 mr-3">May 2017 --</p>
+                  <p class="date text-muted list-inline-item ml-5 pr-3 mr-3">2017 - 2018</p>
                   <div class="list-inline-item">
                     <p class="project-title">Xtreme Movie Theatres</p>
                     <div class="project-info">
@@ -81,7 +81,8 @@
                             <li>select and buy movie tickets of recent movies in the best high quality ever</li>
                             <li>see different showtimes of different movies at different theatres</li>
                           </ul>
-                        <a href="http://xmtheatres.com/" rel="nofollow" target="_blank" class="btn btn-primary">Live Website</a>
+                        <a href="http://xmtheatres.com/" rel="nofollow" target="_blank" class="btn btn-primary mr-3">Live Website</a>
+                        <a href="https://github.com/samuelA1/Xtrememovies" class="btn btn-primary" rel="nofollow" target="_blank">github/git</a>
                         <h6 class="text-muted mt-5">TECHNOLOGIES</h6>
                         <div class="technologies">
                           <li><a href="http://php.net/docs.php" rel="nofollow" target="_blank">Php</a></li>
@@ -90,7 +91,6 @@
                           <li><a href="https://laravelvoyager.com/academy/" rel="nofollow" target="_blank">Voyager</a></li>
                           <li><a href="https://symfony.com/" rel="nofollow" target="_blank">Symfony</a></li>
                           <li><a href="https://api.jquery.com/" rel="nofollow" target="_blank">jquery</a></li>
-                          <li><a href="https://github.com/samuelA1/Xtrememovies" rel="nofollow" target="_blank">github/git</a></li>
                         </div>
                     </div>
                   </div>
@@ -101,7 +101,7 @@
 
                 <!-- Project 4 -->
                 <div class="col-md-8 list-inline">
-                    <p class="date text-muted list-inline-item ml-5 pr-3 mr-3">2016-Apr17</p>
+                    <p class="date text-muted list-inline-item ml-5 pr-3 mr-3">2016 - 2017</p>
                     <div class="list-inline-item">
                       <p class="project-title">Organic Shop (OShop)</p>
                       <div class="project-info">
@@ -111,12 +111,12 @@
                               <li>shop as many organic food as they can</li>
                               <li>gives administrators the ability to add more and new items to sell</li>
                             </ul>
-                          <a href="https://orgshop.shop/" rel="nofollow" target="_blank" class="btn btn-primary">Live Website</a>
+                          <a href="https://orgshop.shop/" rel="nofollow" target="_blank" class="btn btn-primary mr-3">Live Website</a>
+                          <a href="https://github.com/samuelA1/Oshop" class="btn btn-primary" rel="nofollow" target="_blank">github/git</a>
                           <h6 class="text-muted mt-5">TECHNOLOGIES</h6>
                           <div class="technologies">
                             <li><a href="https://docs.angularjs.org/api" rel="nofollow" target="_blank">AngularJs</a></li>
                             <li><a href="https://console.firebase.google.com" rel="nofollow" target="_blank">firebase</a></li>
-                            <li><a href="https://github.com/samuelA1/Oshop" rel="nofollow" target="_blank">github/git</a></li>
                           </div>
                       </div>
                     </div>
