--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -111,7 +111,7 @@
                               <li>shop as many organic food as they can</li>
                               <li>gives administrators the ability to add more and new items to sell</li>
                             </ul>
-                          <a href="https://orgshop.shop/" rel="nofollow" target="_blank" class="btn btn-primary mr-3">Live Website</a>
+                          <a href="https://oshop-fc9c5.firebaseapp.com/" rel="nofollow" target="_blank" class="btn btn-primary mr-3">Live Website</a>
                           <a href="https://github.com/samuelA1/Oshop" class="btn btn-primary" rel="nofollow" target="_blank">github/git</a>
                           <h6 class="text-muted mt-5">TECHNOLOGIES</h6>
                           <div class="technologies">
